<resources>
    <string name="app_name">Gry Terenowe</string>
    <string name="Open">Otwórz</string>
    <string name="Close">Zamknij</string>
    <string name="X">Witaj w świecie Uniwersytetu Ekonomicznego pozwól, że oprowadzę Cię po budynkach uczelnii</string>
    <string name="Dalej">Dalej</string>
    <string name="udaj_si_tam_gdzie_si_rekrutowa_e">Udaj się tam gdzie się rekrutowałeś</string>
    <string name="w_planie_jest_to_budynek">Witaj w Centrum Nowoczesnych Technologii Informatycznych.\n
        Czy zauważyłeś, że budynek przypomina otwartą książkę? Takie było zamierzenie projektu Pracowni Projektowej "Wojciech Podleski" z Katowic.
        W planie ten budynek ma dziwny zapis\nNa klawiaturze komputera to znak uzyskiwany dzięki\nShift + 2\nJaki to znak?</string>
    <string name="wprowad_skr_t_budynku_w_kt_rym_jeste_mo_esz_zapyta_na_portierni">
        Otwarcie tego budynku zbiegło się w czasie z rocznicą powstania tej uczelni,\n
        a dokładniej rocznicę pierwszego wykładu, jaki odbył się w ówczesnym katowickim Wyższym Studium Nauk Społeczno-Gospodarczych.
        Było to w grudniu x roku,
        \n\n\nOdgadnij, który to był rok.\n
    Wskazówką jest wynik działania\n
    2017-F0+F</string>
    <string name="w_budynku_jest_biblioteka_odnajd_j_teraz_przyda_ci_si_jak_nie_bedziesz_czego">W budynku jest biblioteka odnajdź ją teraz, \n przyda Ci się jak nie bedziesz czegoś wiedzieć</string>
    <string name="Na_ktorym_pietrze">Na którym piętrze teraz jesteś? \n(podaj cyfrę)</string>
    <string name="Najnowoczesniejsza">Przejdź na 5 piętro by zobaczyć aulę. \n
        Może się tu zmieścić 197 uczestników. Są tutaj organizowane konferencje i wykłady.\nRozejrzyj się.\nCzy są gdzieś informacje o patronie auli?</string>
    <string name="tak">Tak</string>
    <string name="CNTI7">Piękny widok z okno, pokazuje ci dwa budynki uczelni   W okresie letnim balkon jest otwarty   do dyspozycji studentów     Twoim celem jest budynek po prawej stronie   wejdź do niego od strony ulicy</string>
    <string name="ksero">Ksero, przyjaciel studenta jest na 1 piętrze   obok niego jest strefa studenta   Jak myślisz która firma ją sfinansowała?</string>
    <string name="popiersie">Na 4 piętrze Auli A znajduje się popiersie. Wiesz kto to? \n Podaj nazwisko.</string>
    <string name="winda">Teraz pokażę Ci skrót do budynku B. \n Zjedź windą na 1 piętro i skręć w prawo.</string>
    <string name="skrot">Idź do czasu aż po lewej zobaczysz przejście. \n W zimę to skrót doskonały!</string>
    <string name="pozwiedzaj_budynek_i_wpisz_ile_ma_auli">Pozwiedzaj budynek B i wpisz ile ma auli.</string>
    <string name="skrot_basen">Super! Teraz czas na basen. \n W budynku B na 1 piętrze znajdź skrót do kolejnego budynku. \n Spróbuj się dowiedzieć jaką ma literę.</string>
    <string name="wf">Trafiłeś na galerię basenu. \n W tym budynku jest także sala gimnastyczna \n a każdy musi wf zaliczyć.\n Wf można zaliczyć jednak  udzielając się w: \n Silesianach lub w Chórze</string>
    <string name="podworze">Wyjdź głównym wyjściem z budynku C - trafisz na podwórze.</string>
    <string name="sciany">Pokażę Ci przejście do budynku E. \n Idąc trzymaj się blisko ściany po swojej lewej. \n A przy okazji czy wiesz,\n że zawsze w sprawach studenckich może Ci pomoć \n Parlament Studencki</string>
    <string name="drzwi">To stare drzwi, które mogą odstraszać, \n ale są niezwykle przydatne. \n Są dłużej otwarte niż brama od podwórza. \n Wejdź do środka</string>
    <string name="budynekl">To budynek dziwnie łączony z innym - dowiedz się z jakim.</string>
    <string name="rektor">Wyjdź głównymi drzwiami. \n Po drugiej stronie ulicy widzisz budynek Rektoratu. \n Jak nazywa się Rektor?</string>
    <string name="dziekuje">Dziękuję za wspólną przygodę.</string>
    <string name="nie">Nie</string>
    <string name="czas"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">start</string>
    <string name="google">Google</string>
    <string name="ey">EY</string>
    #outh

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Zaloguj</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Wyloguj</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Usuń dane z bazy</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Wylogowany użytkowniku</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Użytkownik: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Użytkowniku: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>

</resources>
