<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/Najnowoczesniejsza"
        tools:ignore="HardcodedText"
        android:id="@+id/textView"
        android:gravity="center"/>


    <Button
        android:id="@+id/wrong_answer"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/nie" />

    <Button
        android:id="@+id/dalejcnti6"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignBaseline="@+id/wrong_answer"
        android:layout_alignBottom="@+id/wrong_answer"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:text="@string/tak" />

    <TextView
        android:id="@+id/mistake_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="138dp"
        android:layout_toLeftOf="@+id/wrong_answer"
        android:layout_toStartOf="@+id/wrong_answer"
        android:textColor="@color/tomato"/>

</RelativeLayout>

